tests/cases/27_incomplete_func.expected
ark: parse error at line 2, col 1: expected '{' for function body

^
